site-config-service-c2vba_d/site-config-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    label.servicename: "site-config-service-c2vba_d"
    label.gitversion: "site-config-service-c2vba_d_1.24.4.5"
    app: site-config-service
  name: site-config-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: site-config-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: site-config-service
    spec:
      containers:
      - name: app
        image: heuboe/sitesconfig/site-config-service:0.0.14
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: actuator
          protocol: TCP
        - containerPort: 9090
          name: grpc
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: site-data
          mountPath: /site-data
        # livenessProbe:
          # failureThreshold: 5
          # httpGet:
            # path: /actuator/health
            # port: actuator
            # scheme: HTTP
          # initialDelaySeconds: 120
          # periodSeconds: 10
          # timeoutSeconds: 3
          # successThreshold: 1
          # failureThreshold: 10
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /actuator/health
            # port: actuator
            # scheme: HTTP
          # initialDelaySeconds: 60
          # periodSeconds: 10
          # timeoutSeconds: 3
          # successThreshold: 1
          # failureThreshold: 5
        resources:
          limits:
            cpu: "150m"
            memory: 1000Mi
          requests:
            cpu: "50m"
            memory: 600Mi
      volumes:
      - name: config
        configMap:
          name: site-config-service
      - name: site-data
        persistentVolumeClaim: 
          claimName: site-data
